# papon_thesis

./: .gitignore  ECCV2012.bib  IROS2013.bib  LICENSE.md  PaponRefs.bib  README.md  copyright.tex  cvpr2014.bib  dmp.bib  papon_thesis.cls  papon_thesis.kilepr  references.bib  related_publications.tex  thesis.tex
chapters/: chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  conclusion.tex  hierarchical_based.tex  introduction.tex  model_based.tex  oculus_appendix.tex  particle_filter.tex  tracking_based_segmentation.tex  video_seg_relaxation.tex  world_model.tex
figures/Playback/: CColor.cpp  CColor.h  CMakeLists.txt  example_playback.cpp
figures/Tracking/: LayeredFullCranfield_Robot_Trajectories.xcf  Layered_Final_human_view2.xcf  NoNoiseGeodesic.eps  NoNoiseXYZ.eps  NoNoiseXYZ_2.eps  NoNoiseXYZ_3.eps  RoboTrajectoriesLayersv1.xcf  TrajectoryLayers_human.xcf  angle_example_run.eps  convert_crop.sh  crop_plots.sh  disp_err_50_080.eps  disp_example_run.eps  layeredTideSV.xcf
figures/Tracking/ErrorComps/: AngleKinectBox.eps  AngleMilk.eps  AngleOrangeJuice.eps  AngleTide.eps  AngularErrorOrangeJuice.eps  DispErrorOrangeJuice.eps  DispKinectBox.eps  DispOrangeJuice.eps  DispTide.eps
figures/Tracking/HumanTrajectories/: Bench10.xcf  Bench2.xcf  (+16 more)
figures/WACV2015/: AngleOrangeJuice.eps  AngularErrorKinectBox.eps  AngularErrorMilk.eps  AngularErrorTide.eps  DispErrorKinectBox.eps  DispErrorMilk.eps  DispErrorTide.eps  DispKinectBox.eps  DispMilk.eps  geo_err_50_080.eps
frontmatter/: abstract.tex  acronyms.tex  coverpage.tex  thanks.tex
